Fixed Links, Fixed Head Content. More ReadMe

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Purdue Lunabotics</title>
+    <link rel="canonical" href="https://web.ics.purdue.edu/~lunabot/">
+    <meta property="og:url" content="https://web.ics.purdue.edu/~lunabot/">
+    <meta name="description" content="We are the Purdue University team competing in the NASA Lunabotics Competition, an annual moon mining rover challenge. ">
+    <meta property="og:image" content="https://web.ics.purdue.edu/~lunabot/assets/img/Luna Logo Square (1).png">
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -13,6 +17,13 @@
             "url": "https://web.ics.purdue.edu/~lunabot"
         }
     </script>
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
@@ -26,11 +37,11 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/LunaLogoTransparentBackground_Best%20Quality%20(1).png" width="192" height="62"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/team.html">Our Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/team.html">Our Team</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="/sponsors.html">Sponsors</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="join.html">Join Us</a>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/sponsors.html">Sponsors</a></li>
+                </ul><a class="btn btn-primary shadow" role="button" href="/~lunabot/join.html">Join Us</a>
             </div>
         </div>
     </nav>
@@ -41,7 +52,7 @@
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div style="max-width: 350px;">
                         <h2 class="text-uppercase fw-bold">Who Are We?</h2>
-                        <p class="my-3">Purdue Lunabotics is a student organization at Purdue University that has been designing, building and operating lunar robots to compete at the NASA Lunabotics Competition for over a decade.&nbsp;</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Learn More</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Join</a>
+                        <p class="my-3">Purdue Lunabotics is a student organization at Purdue University that has been designing, building and operating lunar robots to compete at the NASA Lunabotics Competition for over a decade.&nbsp;</p><a class="btn btn-primary btn-lg me-2" role="button" href="#history">Learn More</a><a class="btn btn-outline-primary btn-lg" role="button" href="join.html">Join</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -57,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <section class="py-4 py-xl-5">
+        <section class="py-4 py-xl-5" id="history">
             <div class="container">
                 <div class="bg-dark border rounded border-0 border-dark overflow-hidden">
                     <div class="row g-0 me-0">
@@ -80,7 +91,7 @@
                         <h2 class="fw-bold mb-2">Our Competition</h2>
                         <p class="pe-6 mb-0">We compete in the Annual NASA Lunabotics Competition which is one week long and is held at the NASA's Kennedy Space Center in mid-May. Since 2010, this competition has challenged university student teams to design and build a lunar mining or construction robot while applying system engineering principles. </p>
                     </div>
-                    <div class="w-50 my-2"><a class="btn btn-primary" role="button" href="https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html">Learn More</a></div>
+                    <div class="w-50 my-2"><a class="btn btn-primary" role="button" href="https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html" target="_blank">Learn More</a></div>
                 </div>
             </div>
         </section>
