--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Testimonials - Brand</title>
+    <title>Alumni Testimonials - Purdue Lunabotics</title>
+    <link rel="canonical" href="https://web.ics.purdue.edu/~lunabot/testimonials.html">
+    <meta property="og:url" content="https://web.ics.purdue.edu/~lunabot/testimonials.html">
+    <meta name="description" content="We are the Purdue University team competing in the NASA Lunabotics Competition, an annual moon mining rover challenge. ">
+    <meta property="og:image" content="https://web.ics.purdue.edu/~lunabot/assets/img/Luna Logo Square (1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/bss-overrides.css">
@@ -17,11 +28,11 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/LunaLogoTransparentBackground_Best%20Quality%20(1).png" width="192" height="62"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/team.html">Our Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/team.html">Our Team</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="/sponsors.html">Sponsors</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="join.html">Join Us</a>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/sponsors.html">Sponsors</a></li>
+                </ul><a class="btn btn-primary shadow" role="button" href="/~lunabot/join.html">Join Us</a>
             </div>
         </div>
     </nav>
