--- a/sponsors.html
+++ b/sponsors.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Team - Brand</title>
+    <title>Sponsors - Purdue Lunabotics</title>
+    <link rel="canonical" href="https://web.ics.purdue.edu/~lunabot/sponsors.html">
+    <meta property="og:url" content="https://web.ics.purdue.edu/~lunabot/sponsors.html">
+    <meta name="description" content="We are the Purdue University team competing in the NASA Lunabotics Competition, an annual moon mining rover challenge. ">
+    <meta property="og:image" content="https://web.ics.purdue.edu/~lunabot/assets/img/Luna Logo Square (1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
+    <link rel="icon" type="image/png" sizes="960x960" href="assets/img/Luna%20Logo%20Square%20(1).png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/bss-overrides.css">
@@ -17,11 +28,11 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/LunaLogoTransparentBackground_Best%20Quality%20(1).png" width="192" height="62"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/team.html">Our Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/team.html">Our Team</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link active" href="/sponsors.html">Sponsors</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="join.html">Join Us</a>
+                    <li class="nav-item"><a class="nav-link" href="/~lunabot/sponsors.html">Sponsors</a></li>
+                </ul><a class="btn btn-primary shadow" role="button" href="/~lunabot/join.html">Join Us</a>
             </div>
         </div>
     </nav>
@@ -35,14 +46,14 @@
                     </div>
                 </div>
                 <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3" data-bss-baguettebox="">
-                    <div class="col"><a href="https://sendcutsend.com/"><img src="assets/img/clipboard-image-6.png" width="376" height="220"></a></div>
-                    <div class="col"><a href="protocase.com"><img class="img-fluid" src="assets/img/clipboard-image-7.png"></a></div>
-                    <div class="col"><a href="https://engineering.purdue.edu/IE"><img class="img-fluid" src="assets/img/School-of-Industrial-Engineering_V-Full-RGB-2.png"></a></div>
-                    <div class="col"><a href="https://engineering.purdue.edu/ECE"><img class="img-fluid" src="assets/img/PurdueECE.jpg"></a></div>
-                    <div class="col"><a href="https://engineering.purdue.edu/ME"><img class="img-fluid" src="assets/img/ME.png"></a></div>
-                    <div class="col"><a href="https://www.purdue.edu/sao/"><img src="assets/img/SFAB.png" width="428" height="217"></a></div>
-                    <div class="col"><a href="https://www.northropgrumman.com/"><img src="assets/img/northrup.png" width="422" height="142"></a></div>
-                    <div class="col"><a href="https://www.solidworks.com/"><img src="assets/img/SolidWorks_Logo.svg.png" width="425" height="111"></a></div>
+                    <div class="col"><a href="https://sendcutsend.com/" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/clipboard-image-6.png" width="376" height="220"></a></div>
+                    <div class="col"><a href="https://protocase.com" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/clipboard-image-7.png"></a></div>
+                    <div class="col"><a href="https://engineering.purdue.edu/IE" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/School-of-Industrial-Engineering_V-Full-RGB-2.png"></a></div>
+                    <div class="col"><a href="https://engineering.purdue.edu/ECE" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/PurdueECE.jpg"></a></div>
+                    <div class="col"><a href="https://engineering.purdue.edu/ME" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/ME.png"></a></div>
+                    <div class="col"><a href="https://www.purdue.edu/sao/" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/SFAB.png" width="428" height="217"></a></div>
+                    <div class="col"><a href="https://www.northropgrumman.com/" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/northrup.png" width="422" height="142"></a></div>
+                    <div class="col"><a href="https://www.solidworks.com/" target="_blank"><img class="img-fluid object-fit-scale w-100" src="assets/img/SolidWorks_Logo.svg.png" width="425" height="111"></a></div>
                 </div>
             </div>
         </section>
