updated title and removed redirect

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Purdue Lunabotics</title>
+    <title>Home - Purdue Lunabotics</title>
     <link rel="canonical" href="https://web.ics.purdue.edu/~lunabot/">
     <meta property="og:url" content="https://web.ics.purdue.edu/~lunabot/">
     <meta name="description" content="We are the Purdue University team competing in the NASA Lunabotics Competition, an annual moon mining rover challenge. ">
