--- a/join.html
+++ b/join.html
@@ -47,7 +47,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 col-xl-4">
                     <div>
-                        <form class="p-3 p-xl-4" data-bs-theme="light" data-bss-recipient="245b4616c8440cc6ed5e41775c208aa4" data-bss-redirect-url="https://boilerlink.purdue.edu/organization/lunabotics" data-bss-success-message="Your message has been sent! Check out our BoilerLink Page for more Info!">
+                        <form class="p-3 p-xl-4" data-bs-theme="light" data-bss-recipient="245b4616c8440cc6ed5e41775c208aa4" data-bss-success-message="Your message has been sent! Check out our BoilerLink Page for more Info!">
                             <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Name" required=""></div>
                             <div class="mb-3"><input class="form-control" type="text" id="name-2" name="major" placeholder="Major" required=""><input class="form-control" type="email" id="email-2" name="email" placeholder="Purdue Email" style="margin-top: 15px;padding-top: 6px;" required=""></div>
                             <div class="mb-3"><textarea class="form-control" id="message-1" name="message" rows="6" placeholder="Message"></textarea></div>
