fix link on brand image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top py-3 navbar-shrink" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/LunaLogoTransparentBackground_Best%20Quality%20(1).png" width="192" height="62"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/~lunabotics/index.html"><img src="assets/img/LunaLogoTransparentBackground_Best%20Quality%20(1).png" width="192" height="62"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="/~lunabot/index.html">Home</a></li>
